--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typography-plugin-code": "^0.13.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "eslint": "^2.11.1",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "1.5.3",
