--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: cpp
 sudo: false
 env:
-- export NODE_VERSION="0.12"
-- export NODE_VERSION="4"
 - export NODE_VERSION="5"
 os:
 - linux
-- osx
 before_install:
 - openssl aes-256-cbc -K $encrypted_94a7a972b13d_key -iv $encrypted_94a7a972b13d_iv
   -in deploy_rsa.enc -out deploy_rsa -d
@@ -24,6 +21,8 @@ before_deploy:
 - eval "$(ssh-agent -s)"
 - chmod 600 $TRAVIS_BUILD_DIR/deploy_rsa
 - ssh-add $TRAVIS_BUILD_DIR/deploy_rsa
+- git config --global user.email "info@wanderlandtravelers.com"
+- git config --global user.name "Wanderland Travelers"
 addons:
   apt:
     sources:
