--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_deploy:
 - eval "$(ssh-agent -s)"
 - chmod 600 $TRAVIS_BUILD_DIR/deploy_rsa
 - ssh-add $TRAVIS_BUILD_DIR/deploy_rsa
-- git config --global user.email "bradpitcher@gmail.com"
-- git config --global user.name "Brad Pitcher"
+- git config --global user.email "info@wanderlandtravelers.com"
+- git config --global user.name "Wanderland Travelers"
 - git remote remove origin
 - git remote add origin git@github.com:WanderlandTravelers/wanderlandtravelers.github.io.git
 addons:
