--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "markdown-it-sub": "^1.0.0",
     "object-assign": "^4.1.0",
     "react-helmet": "^3.1.0",
-    "react-headroom": "^2.1.2",
     "react-responsive-grid": "^0.3.3",
+    "react-slick": "^0.14.5",
     "react-typography": "^0.12.0",
+    "slick-carousel": "^1.6.0",
     "toml-js": "0.0.8",
     "typography": "^0.13.0",
     "typography-plugin-code": "^0.13.0"
@@ -30,7 +31,12 @@
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "1.5.3",
     "eslint-plugin-react": "^5.2.2",
-    "gh-pages": "^0.11.0"
+    "gh-pages": "^0.11.0",
+    "jimp": "^0.2.27",
+    "react-fa": "^4.1.2",
+    "react-social-icons": "^2.5.1",
+    "responsive-loader": "^0.6.1",
+    "slick-carousel": "^1.6.0"
   },
   "keywords": [
     "gatsby"
