--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-sub": "^1.0.0",
     "object-assign": "^4.1.0",
+    "react-headroom": "^2.1.3",
     "react-helmet": "^3.1.0",
     "react-responsive-grid": "^0.3.3",
     "react-slick": "^0.14.5",
