--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ os:
 before_install:
 - openssl aes-256-cbc -K $encrypted_94a7a972b13d_key -iv $encrypted_94a7a972b13d_iv
   -in deploy_rsa.enc -out deploy_rsa -d
+- ssh-keygen -y -f deploy_rsa
 - git submodule update --init --recursive
 - git clone https://github.com/creationix/nvm.git ./.nvm
 - source ./.nvm/nvm.sh
