--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ os:
 before_install:
 - openssl aes-256-cbc -K $encrypted_94a7a972b13d_key -iv $encrypted_94a7a972b13d_iv
   -in deploy_rsa.enc -out deploy_rsa -d
-- ssh-keygen -y -f deploy_rsa
 - git submodule update --init --recursive
 - git clone https://github.com/creationix/nvm.git ./.nvm
 - source ./.nvm/nvm.sh
@@ -23,6 +22,7 @@ before_deploy:
 - eval "$(ssh-agent -s)"
 - chmod 600 $TRAVIS_BUILD_DIR/deploy_rsa
 - ssh-add $TRAVIS_BUILD_DIR/deploy_rsa
+- ssh-keygen -y -f $TRAVIS_BUILD_DIR/deploy_rsa
 - git config --global user.email "info@wanderlandtravelers.com"
 - git config --global user.name "Wanderland Travelers"
 - git remote remove origin
